--- a/web/admin/application/configs/klear/WholesaleClientsList.yaml
+++ b/web/admin/application/configs/klear/WholesaleClientsList.yaml
@@ -1,5 +1,6 @@
 #include conf.d/mapperList.yaml
 #include conf.d/actions.yaml
+#include conf.d/documentationLink.yaml
 #include TpRatingProfilesList.yaml
 #include AdministratorsList.yaml
 #include KamTrustedList.yaml
@@ -16,6 +17,9 @@ production:
       <<: *WholesaleClients
       class: ui-silk-cart
       title: _("List of %s %2s", ngettext('Wholesale Client', 'Wholesale Clients', 0), "[format| (%parent%)]")
+      info:
+        <<: *documentationLink
+        href: "/doc/${lang}/brand/wholesale.html"
       forcedValues:
         type: 'wholesale'
         <<: *forcedBrand
